<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:paddingTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_shade_1"
            tools:context=".MainActivity">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/IdPbLoading"
                android:visibility="gone"
                android:layout_centerInParent="true"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/IdRlHome"
                android:visibility="visible">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@color/black_shade_1"
                    android:id="@+id/Idivback"/>
                <ImageView
                    android:id="@+id/iv_favorite"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/favorite_icon"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/IdTvCityName"
                    android:layout_marginTop="70dp"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/city_name"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/IdLLedt"
                    android:layout_below="@+id/IdTvCityName"
                    android:weightSum="5">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/IdTilCity"
                        android:layout_margin="10dp"
                        android:layout_weight="4.5"
                        app:boxStrokeColor="@android:color/transparent"
                        android:background="@android:color/transparent"
                        android:hint="@string/enter_city_name"
                        android:padding="5dp"
                        app:hintTextColor="@color/white"
                        android:textColorHint="@color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/Ideditcity"
                            android:background="@android:color/transparent"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textSize="14sp"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/IdIvSearch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_weight="0.5"
                        android:background="@android:color/transparent"
                        android:src="@drawable/baseline_search_24"
                        app:tint="@color/white"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/IdTvTempearture"
                    android:layout_below="@+id/IdLLedt"
                    android:layout_margin="10dp"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/temp"
                    android:textColor="@color/white"
                    android:textSize="70dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/IdIvIcon"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/IdTvTempearture"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:id="@+id/IDtVCondition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/IdIvIcon"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/condition"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_above="@+id/Idrvweather"
                    android:layout_marginBottom="10dp"
                    android:text="@string/forecast"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Idrvweather"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
            </RelativeLayout>


        </RelativeLayout>
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF000000"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    </FrameLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_marginTop="20dp"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
